--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-# Object file
-*.o
-
-# Ada Library Information
-*.ali
+nbproject
+._*
+.vagrant
+.~lock.*
+.buildpath
+.DS_Store
+.idea
+.project
+.settings
+composer.lock
+vendor
+composer.phar
+!/composer.lock
+/ZendCodeDemoTodo.txt
+/ZendNotes.txt
